--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 #服务名称
-spring.application.name=spring-boot-demo
+spring.application.name=springboot-demo
 #服务端口
 server.port=8888
 #debug模式
 debug=true
+#配置 Nacos server 的地址
+spring.cloud.nacos.discovery.server-addr=nacos.lp.com:80
+
+configString = configString
+#spring.profiles.active=test
